<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add_note">Добавить</string>
    <string name="hint_text_for_name_edit">Введите название заметки</string>
    <string name="hint_text_for_text_edit">Текст заметки</string>
    <string name="start_text">Что хотите использовать?</string>
    <string name="room">Room</string>
    <string name="firebase">Firebase</string>
    <string name="title">Заметки</string>
    <string name="toast_enter_name">Ошибка ввода данных</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
</resources>