<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.new_note.AddNewNoteFragment">


    <EditText
        android:id="@+id/imput_name_node"
        style="@style/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        android:autofillHints="@string/hint_text_for_name_edit"/>

    <EditText
        android:id="@+id/imput_text_node"
        style="@style/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imput_name_node"
        tools:ignore="LabelFor"
        android:autofillHints="@string/hint_text_for_text_edit"/>

    <Button
        android:id="@+id/btn_add_node"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_note"
        android:layout_margin="@dimen/app_margin"
        app:layout_constraintTop_toBottomOf="@id/imput_text_node"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>